<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <Spinner
                android:id="@+id/spinnerMonth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/etCustomerId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/enter_customer_id"
                android:inputType="text"
                android:autofillHints="username"
                android:textColor="@color/textPrimary"
                android:background="@drawable/edit_text_background"
                app:layout_constraintTop_toBottomOf="@id/spinnerMonth"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/btnVerifyCustomer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/verify_customer"
                android:textColor="@color/buttonText"
                android:backgroundTint="@color/buttonBackground"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                app:layout_constraintTop_toBottomOf="@id/etCustomerId"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnSkipCustomer"
                app:layout_constraintHorizontal_weight="1" />

            <Button
                android:id="@+id/btnSkipCustomer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/skip"
                android:textColor="@color/buttonText"
                android:backgroundTint="@color/buttonBackground"
                android:layout_marginTop="8dp"
                android:layout_marginStart="4dp"
                app:layout_constraintTop_toBottomOf="@id/etCustomerId"
                app:layout_constraintStart_toEndOf="@id/btnVerifyCustomer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="1" />

            <TextView
                android:id="@+id/tvCustomerName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/textPrimary"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/btnVerifyCustomer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tvPreviousMonthReading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/textPrimary"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/tvCustomerName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:visibility="gone" />

            <EditText
                android:id="@+id/etPreviousReading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/previous_reading_hint"
                android:inputType="numberDecimal"
                android:autofillHints="postalAddress"
                android:textColor="@color/textPrimary"
                android:background="@drawable/edit_text_background"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/tvPreviousMonthReading"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/etCurrentReading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/current_reading_hint"
                android:inputType="numberDecimal"
                android:autofillHints="postalAddress"
                android:textColor="@color/textPrimary"
                android:background="@drawable/edit_text_background"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/etPreviousReading"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/etRemarks"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/remarks_hint"
                android:inputType="text"
                android:autofillHints="postalAddress"
                android:textColor="@color/textPrimary"
                android:background="@drawable/edit_text_background"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/etCurrentReading"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <Spinner
                android:id="@+id/spinnerStreet"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/etRemarks"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/btnAddStreet"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/add_street"
                android:textColor="@color/buttonText"
                android:backgroundTint="@color/buttonBackground"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/spinnerStreet"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnDeleteStreet"
                app:layout_constraintHorizontal_weight="1" />

            <Button
                android:id="@+id/btnDeleteStreet"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/delete_street"
                android:textColor="@color/buttonText"
                android:backgroundTint="@android:color/holo_red_dark"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/spinnerStreet"
                app:layout_constraintStart_toEndOf="@id/btnAddStreet"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="1" />

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:textColor="@color/buttonText"
                android:backgroundTint="@color/buttonBackground"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/btnAddStreet"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/btnBackup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/backup"
                android:textColor="@color/buttonText"
                android:backgroundTint="@color/buttonBackground"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/btnSubmit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/btnPrint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/print_receipt"
                android:textColor="@color/buttonText"
                android:backgroundTint="@color/buttonBackground"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/btnBackup"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tvLastCustomerId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/textPrimary"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/btnPrint"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/btnNotepad"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/notepad"
                android:textColor="@color/buttonText"
                android:backgroundTint="@color/buttonBackground"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/tvLastCustomerId"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/btnSearch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/search_by_name"
                android:textColor="@color/buttonText"
                android:backgroundTint="@color/buttonBackground"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/btnNotepad"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/btnList"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/customer_list"
                android:textColor="@color/buttonText"
                android:backgroundTint="@color/buttonBackground"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/btnSearch"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/btnHistory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/history"
                android:textColor="@color/buttonText"
                android:backgroundTint="@color/buttonBackground"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/btnList"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>